Style:  Fix legibility of nav dropdown

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,12 @@ nav div ul li a {
     text-shadow: 2px 2px 5px rgba(50, 50, 50, 1);
 }
 
+/* override standard Materialize styling for nav dropdown */
+.dropdown-content li a {
+    color: rgba(50, 50, 50, 1);
+    text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
+}
+
 .heading-text-shadow {
     text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
 }
